Try to fix instructor  spacing

--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -30,7 +30,7 @@
     @media screen and (min-width: 676px) {
         height: 140px;
         padding-right: 0pt;
-        // margin-bottom: 20px;
+        margin-bottom: 100px;
     }
 
     img {
